samples/kuadrant_dnspolicy/gateway_prod-web-istio.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: prod-web-istio
  namespace: multi-cluster-gateways
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: api
      hostname: myapp.mn.hcpapps.net
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: mn-hcpapps-net-tls
            kind: Secret
    - allowedRoutes:
        namespaces:
          from: All
      name: api2
      hostname: myapp2.mn.hcpapps.net
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: mn-hcpapps-net-tls
            kind: Secret
